<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:scrollbarSize="10dp"
            android:src="@drawable/img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|bottom"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/map" />

            <TextView
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="8dp"
                android:text="@string/locationF"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/black"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@drawable/circle_background"
            android:paddingRight="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/photo_ruslan"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:paddingLeft="13dp"
            android:paddingRight="50dp"
            android:text="Ruslan Marchenko"
            android:textColor="@color/purple_500"
            android:textSize="12sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="67dp"

            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:src="@drawable/location_on_24px"
            android:text="Rex" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:src="@drawable/favorite_24px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:src="@drawable/baseline_download_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/CameraMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/ApertureMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/maCamera"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/maAperture"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/FocalMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/ShouterSpeedMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/maFocal"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/maShouterSpeed"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/ISOMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/DimensionsMessage"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingBottom="10dp"
                android:text="@string/maISO"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingBottom="10dp"
                android:text="@string/maDimensions"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:layout_gravity="left"
                android:paddingBottom="20dp"
                android:text="@string/ViewsT"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/DownloadsT"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="40dp"
                android:paddingBottom="20dp"
                android:text="@string/LikesT"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="43dp"
                android:layout_gravity="left"
                android:paddingBottom="24dp"
                android:text="@string/ViewsIn"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="100dp"
                android:paddingRight="97dp"
                android:layout_gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/DownloadIn"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingRight="40dp"
                android:paddingBottom="24dp"
                android:text="@string/LikesIn"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp">

            <Button
                android:layout_width="121dp"
                android:layout_height="30dp"
                android:layout_gravity="start"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/white"
                android:text="@string/locationCi"
                android:textSize="18sp"
                android:textColor="@color/black" />

            <Button
                android:layout_width="136dp"
                android:layout_height="match_parent"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/white"
                android:text="@string/locationCo"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


 </LinearLayout>
